--- a/TMS/TMS/Views/Ticket/Detail.cshtml
+++ b/TMS/TMS/Views/Ticket/Detail.cshtml
@@ -87,7 +87,7 @@
                 @switch (Model.Status)
                 {
                     case ConstantUtil.TicketStatus.Open:
-                        <div class="col-lg-1 col-sm-2 text-center column-body status bg-aqua" id="status-div">New</div> break;
+                        <div class="col-lg-1 col-sm-2 text-center column-body status bg-aqua" id="status-div">Open</div> break;
                     case ConstantUtil.TicketStatus.Assigned:
                         <div class="col-lg-1 col-sm-2 text-center column-body status bg-orange" id="status-div">Assigned</div> break;
                     case ConstantUtil.TicketStatus.Solved:
