--- a/TMS/TMS/Views/Ticket/Index.cshtml
+++ b/TMS/TMS/Views/Ticket/Index.cshtml
@@ -154,7 +154,7 @@
                                 + '<div class="box-footer no-padding bg-light-green">';
                             switch (dataItems[i].Status) {
                                 case 1:
-                                    innerCode += '<div class="col-lg-1 col-sm-2 column-body status bg-aqua">New</div>'; break;
+                                    innerCode += '<div class="col-lg-1 col-sm-2 column-body status bg-aqua">Open</div>'; break;
                                 case 2:
                                     innerCode += '<div class="col-lg-1 col-sm-2 column-body status bg-orange">Assigned</div>'; break;
                                 case 3:
