--- a/TMS/TMS/Views/KnowledgeBase/Index.cshtml
+++ b/TMS/TMS/Views/KnowledgeBase/Index.cshtml
@@ -242,7 +242,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">Frequently Asked Subjects</h4>
+                <h4 class="modal-title">10 Frequently Asked Tickets</h4>
             </div>
             <div class="modal-body">
                 <div class="pull-right">
