--- a/TMS/TMS/Views/Ticket/Create.cshtml
+++ b/TMS/TMS/Views/Ticket/Create.cshtml
@@ -56,7 +56,7 @@
                 </div>
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-8" style="text-align: center" >
-                        <input type="button" id="saveBtn" value="Save" class="btn btn-success btn-flat button" />
+                        <input type="submit" id="saveBtn" value="Save" class="btn btn-success btn-flat button" />
                         <a class="btn btn-default btn-flat button" href="@(Url.Action("Index", "Ticket"))">Cancel</a>
                     </div>
                 </div>
@@ -66,7 +66,8 @@
 </div>
 @section scripts{
     <script>
-        $("#saveBtn").on("click", function () {
+        $("#create-ticket-form").on("submit", function (e) {
+            e.preventDefault();
             if (checkUploadFile()) {
                 $("#saveBtn").attr("disabled", true);
                 var formData = new FormData($('#create-ticket-form')[0]);
