--- a/TMS/TMS/Content/custom-css/tms.css
+++ b/TMS/TMS/Content/custom-css/tms.css
@@ -31,6 +31,10 @@
     color: #ffffff !important;
 }
 
+.bg-violet {
+    background-color: #605ca8 !important;
+}
+
 .modal {
     text-align: center;
 }
