--- a/TMS/TMS/Views/Ticket/Solve.cshtml
+++ b/TMS/TMS/Views/Ticket/Solve.cshtml
@@ -144,6 +144,17 @@
                         <div class="col-sm-10 pre-wrap">@Html.Raw(Model.DescriptionAttachmentsURL)</div>
                     </div>
                 </div>
+                @if (!string.IsNullOrWhiteSpace(Model.UnapproveReason))
+                {
+                    <div class="col-sm-12">
+                        <div class="col-sm-2 labels">
+                            <b>UnapproveReason: </b>
+                        </div>
+                        <div class="col-sm-10">
+                            <span class="pre-wrap">@Html.DisplayFor(m => m.UnapproveReason)</span>
+                        </div>
+                    </div>
+                }
                 <form id="solveForm" role="form" method="POST">
                     @Html.AntiForgeryToken()
                     <input type="hidden" name="ID" value="@Model.ID" />
