--- a/TMS/TMS/Views/Ticket/TicketDetail.cshtml
+++ b/TMS/TMS/Views/Ticket/TicketDetail.cshtml
@@ -113,6 +113,17 @@
                         <div class="col-sm-10 pre-wrap">@Html.Raw(Model.SolutionAttachmentsURL)</div>
                     </div>
                 </div>
+                @if (!string.IsNullOrWhiteSpace(Model.UnapproveReason))
+                {
+                    <div class="col-sm-12">
+                        <div class="col-sm-2 labels">
+                            <b>UnapproveReason: </b>
+                        </div>
+                        <div class="col-sm-10">
+                            <span class="pre-wrap">@Html.DisplayFor(m => m.UnapproveReason)</span>
+                        </div>
+                    </div>
+                }
                 <div class="col-sm-12 row-content ">
                     <div class="col-sm-6">
                         <div class="col-sm-4 labels">
