--- a/TMS/TMS/Areas/Manager/Views/Home/Index.cshtml
+++ b/TMS/TMS/Areas/Manager/Views/Home/Index.cshtml
@@ -129,7 +129,8 @@
                             <a href="/Manager/ManageSC/Priority">Priority</a>&nbsp; | &nbsp;
                             <a href="/Manager/ManageSC/Urgency">Urgency</a>&nbsp; | &nbsp;
                             <a href="/Manager/ManageSC/PriorityMatrix">Priority Matrix</a>&nbsp; | &nbsp;
-                            <a href="/Manager/ManageSC/Category">Category</a>
+                            <a href="/Manager/ManageSC/Category">Category</a>&nbsp; | &nbsp;
+                            <a href="/Manager/ManageSC/Keywords">Keyword</a>
                         </div>
                     </div>
                 </div>
