--- a/TMS/TMS/Areas/Manager/Views/Shared/_TopLayout.cshtml
+++ b/TMS/TMS/Areas/Manager/Views/Shared/_TopLayout.cshtml
@@ -35,6 +35,7 @@
                                     <li><a href="/Manager/ManageSC/Urgency">Urgency</a></li>
                                     <li><a href="/Manager/ManageSC/PriorityMatrix">PriorityMatrix</a></li>
                                     <li><a href="/Manager/ManageSC/Category">Category</a></li>
+                                    <li><a href="/Manager/ManageSC/Keywords">Keywords</a></li>
                                 </ul>
                             </li>
                             <li class="@Html.Raw((controllerName == "Profile") ? "active" : "")"><a href="/Manager/Profile">Profile </a></li>
