--- a/TMS/TMS/Views/Ticket/Solve.cshtml
+++ b/TMS/TMS/Views/Ticket/Solve.cshtml
@@ -321,7 +321,7 @@
                 <div class="col-sm-12 row-content">
                     <div class="col-sm-12 col-content ">
                         <div class="col-sm-2 labels">
-                            <b>Tags: </b>
+                            <b>Keywords: </b>
                         </div>
                         <div class="col-sm-10"><span id="tags"></span></div>
                     </div>
