--- a/TMS/TMS/Views/Ticket/TicketDetail.cshtml
+++ b/TMS/TMS/Views/Ticket/TicketDetail.cshtml
@@ -400,7 +400,7 @@
                 <a href="/Helpdesk/ManageTicket" class="btn btn-default btn-flat button">Back</a>
                 break;
             default:
-                <a href="/Technician/Home" class="btn btn-default btn-flat button">Back</a>
+                <a href="/Technician/ManageTicket" class="btn btn-default btn-flat button">Back</a>
                 break;
         }
     </div>
