--- a/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
+++ b/TMS/TMS/Areas/HelpDesk/Views/ManageTicket/Index.cshtml
@@ -272,7 +272,7 @@
                                 <div class="col-sm-12 row-content">
                                     <div class="col-sm-12">
                                         <div class="col-sm-2 labels">
-                                            <b>Tags: </b>
+                                            <b>Keywords: </b>
                                         </div>
                                         <div class="col-sm-10" style="padding-left: 10px"><span id="ticket-tags"></span></div>
                                     </div>
