--- a/TMS/TMS/Areas/Manager/Views/ManageSC/Keywords.cshtml
+++ b/TMS/TMS/Areas/Manager/Views/ManageSC/Keywords.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TMS.Models.Impact
 @{
-    ViewBag.Title = "Impact";
+    ViewBag.Title = "Keywords";
     Layout = "~/Areas/Manager/Views/Shared/_TopLayout.cshtml";
 }
 
@@ -8,12 +8,11 @@
     <div class="col-xs-12">
         <div class="box box-primary">
             <div class="box-body">
-                <button type="button" class="btn btn-flat btn-primary" onclick="showCreateModal()"><i class="fa fa-plus"></i>&nbsp;New Impact</button>
-                <table class="table dataTable" id="impact-table">
+                <button type="button" class="btn btn-flat btn-primary" onclick="showCreateModal()"><i class="fa fa-plus"></i>&nbsp;New Keyword</button>
+                <table class="table dataTable" id="keywords-table">
                     <thead>
                         <tr>
                             <th>Name</th>
-                            <th>Description</th>
                             <th>Action</th>
                         </tr>
                     </thead>
@@ -35,7 +34,7 @@
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
-                <h4 class="modal-title">Impact</h4>
+                <h4 class="modal-title">Keyword</h4>
             </div>
             <div class="modal-body">
                 <div class="form-horizontal">
@@ -46,12 +45,6 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label class="col-sm-2 control-label">Description</label>
-                        <div class="col-sm-10">
-                            <textarea class="form-control" rows="3" placeholder="Description" id="description-txt"></textarea>
-                        </div>
-                    </div>
-                    <div class="form-group">
                         <div class="col-sm-offset-2 col-sm-10">
                             <p id="name-validation-message" class="text-danger" style="display: none"></p>
                         </div>
@@ -59,7 +52,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-success" id="create-btn" onclick="createImpact()">Save</button>
+                <button type="button" class="btn btn-success" id="create-btn" onclick="createKeyword()">Save</button>
                 <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
             </div>
         </div>
@@ -93,47 +86,37 @@
 @section scripts{
     @Scripts.Render("~/bundles/datatables")
     <script>
-        $("#impact-table")
-            .DataTable({
-                processing: true,
-                serverSide: true,
-                paging: false,
-                sort: false,
-                filter: false,
-                ajax: {
-                    url: "/Manager/ManageSC/GetImpacts"
+        $("#keywords-table").DataTable({
+            processing: true,
+            serverSide: true,
+            paging: true,
+            lengthChange: false,
+            sort: true,
+            filter: false,
+            ajax: {
+                url: "/Manager/ManageSC/GetKeywords"
+            },
+            columnDefs: [
+                {
+                    "render": function (data, type, row) {
+                        return row.Name;
+                    },
+                    "targets": 0,
                 },
-                columnDefs: [
-                    {
-                        "render": function (data, type, row) {
-                            return row.Name;
-                        },
-                        "targets": 0,
+                {
+                    "render": function (data, type, row) {
+                        var content = '<a href="javascript:void(0)" class="btn btn-xs btn-primary" data-toggle="modal" onclick="getKeywordDetail(\'' + row.ID + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;' +
+                           '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showDeleteModal(\'' + row.ID + '\')"><i class="fa fa-trash-o"></i></a>';
+                        return content;
                     },
-                    {
-                        "render": function (data, type, row) {
-                            return row.Description;
-                        },
-                        "targets": 1
-                    },
-                    {
-                        "render": function (data, type, row) {
-                            var content = "";
-                            if (row.IsSystem) {
-                                content = '<a href="javascript:void(0)" class="btn btn-xs btn-primary" data-toggle="modal" onclick="getImpactDetail(\'' + row.Id + '\')"><i class="fa fa-pencil"></i></a>';
-                            } else {
-                                content = '<a href="javascript:void(0)" class="btn btn-xs btn-primary" data-toggle="modal" onclick="getImpactDetail(\'' + row.Id + '\')"><i class="fa fa-pencil"></i></a>&nbsp;&nbsp;' +
-                                   '<a href="javascript:void(0)" class="btn btn-xs btn-primary" onclick="showDeleteModal(\'' + row.Id + '\')"><i class="fa fa-trash-o"></i></a>';
-                            }
-                            return content;
-                        },
-                        "targets": 2
-                    }
-                ]
-            });
+                    "targets": 1,
+                    "sortable": false
+                }
+            ]
+        });
 
         var reloadDataTable = function () {
-            var oTable = $("#impact-table").dataTable();
+            var oTable = $("#keywords-table").dataTable();
             oTable._fnPageChange(0);
             oTable._fnAjaxUpdate();
         };
@@ -147,17 +130,17 @@
         var showCreateModal = function () {
             clearModal();
             $("#myModal").modal('show');
-            $('#create-btn').attr('onclick', 'createImpact()');
+            $('#create-btn').attr('onclick', 'createKeyword()');
         };
 
-        var createImpact = function () {
+        var createKeyword = function () {
+            $('#create-btn').prop("disabled", true);
             $.ajax({
-                url: "/Manager/ManageSC/CreateImpact",
+                url: "/Manager/ManageSC/CreateKeyword",
                 dataType: "json",
                 type: "POST",
                 data: {
                     Name: $("#name-txt").val(),
-                    Description: $("#description-txt").val()
                 },
                 success: function (data) {
                     if (data.success) {
@@ -179,6 +162,7 @@
                             timeout: 2000
                         });
                     }
+                    $('#create-btn').prop("disabled", false);
                 },
                 error: function () {
                     noty({
@@ -187,14 +171,15 @@
                         type: "error",
                         timeout: 2000
                     });
+                    $('#create-btn').prop("disabled", false);
                 }
             });
         }
 
-        var getImpactDetail = function (id) {
+        var getKeywordDetail = function (id) {
             clearModal();
             $.ajax({
-                url: "/Manager/ManageSC/GetImpactDetail",
+                url: "/Manager/ManageSC/GetKeywordDetail",
                 dataType: "json",
                 type: "GET",
                 data: {
@@ -204,8 +189,7 @@
                     if (data.success) {
                         $("#myModal").modal("show");
                         $("#name-txt").val(data.name);
-                        $("#description-txt").val(data.description);
-                        $("#create-btn").attr("onclick", "editImpact('" + id + "')");
+                        $("#create-btn").attr("onclick", "editKeyword('" + id + "')");
                     } else {
                         noty({
                             text: data.message,
@@ -226,15 +210,15 @@
             });
         };
 
-        var editImpact = function (id) {
+        var editKeyword = function (id) {
+            $('#create-btn').prop("disabled", true);
             $.ajax({
-                url: "/Manager/ManageSC/EditImpact",
+                url: "/Manager/ManageSC/EditKeyword",
                 dataType: "json",
                 type: "POST",
                 data: {
                     id: id,
                     name: $("#name-txt").val(),
-                    description: $("#description-txt").val()
                 },
                 success: function (data) {
                     if (data.success) {
@@ -256,6 +240,7 @@
                             timeout: 2000
                         });
                     }
+                    $('#create-btn').prop("disabled", false);
                 },
                 error: function () {
                     noty({
@@ -264,18 +249,20 @@
                         type: "error",
                         timeout: 2000
                     });
+                    $('#create-btn').prop("disabled", false);
                 }
             });
         }
 
         var showDeleteModal = function (id) {
-            $("#yes-btn").attr("onclick", "deleteImpact('" + id + "')");
+            $("#yes-btn").attr("onclick", "deleteKeyword('" + id + "')");
             $("#delete-modal").modal("show");
         };
 
-        var deleteImpact = function (id) {
+        var deleteKeyword = function (id) {
+            $("#yes-btn").prop("disabled", true);
             $.ajax({
-                url: "/Manager/ManageSC/DeleteImpact",
+                url: "/Manager/ManageSC/DeleteKeyword",
                 dataType: "json",
                 type: "POST",
                 data: { id: id },
@@ -289,7 +276,7 @@
                         });
                         $("#delete-modal").modal("hide");
                         reloadDataTable();
-                    } else if (!data.success) {
+                    } else {
                         noty({
                             text: data.message,
                             type: "error",
@@ -298,6 +285,7 @@
                         });
                         $("#delete-modal").modal("hide");
                     }
+                    $("#yes-btn").prop("disabled", false);
                 },
                 error: function () {
                     noty({
@@ -306,6 +294,7 @@
                         layout: "topRight",
                         timeout: 2000
                     });
+                    $("#yes-btn").prop("disabled", false);
                 }
             });
 
